--- a/zh-CN.yml
+++ b/zh-CN.yml
@@ -611,12 +611,7 @@ commands:
         link: '页面地址: {0}'
         source: '图源: {0}'
         tags: '标签: {0}'
-      booru:
-        tips:
-          general:
-          - null
-          - null
-          - <b>提示：</b>{0}
+      tips: <b>提示：</b>{0}
 general:
   $: 通用设置
   name: 中文
@@ -766,19 +761,10 @@ root: 要监听的文件或目录列表，相对于 `base` 路径。
 ignored: 要忽略的文件或目录。支持 [Glob Patterns](https://github.com/micromatch/micromatch) 语法。
 debounce: 延迟触发更新的等待时间。
 booru:
-  booru:
-    tips:
-      general:
-      - null
-      - null
-      - general:
-        - 不带参数调用此命令将会随机返回一张图片
-        - 可以使用 <code>-l &lt;label&gt;</code> 或 <code>--label &lt;label&gt;</code>
-          参数指定图源标签
   tips:
     general:
-    - null
-    - null
+    - 不带参数调用此命令将会随机返回一张图片
+    - 可以使用 <code>-l &lt;label&gt;</code> 或 <code>--label &lt;label&gt;</code> 参数指定图源标签
     - 可以使用 <code>-c &lt;count&gt;</code> 或 <code>--count &lt;count&gt;</code> 参数指定返回图片数量
     - 使用 <code>{0} -c 3</code> 可以返回 3 张图片
     - 指定的图片数量与实际返回的图片数量可能有所不同
